# machine-learning-projects

./: README.md  pyproject.toml  regresion-lineal-multiple.ipynb  regresion-lineal-simple.ipynb
datasets/: caba_propiedades.csv
humai/1_Introduccion/: regresion-lineal-simple.ipynb
humai/2_RegresionLinealMultiple/: RegresionLinealMultiple.ipynb
utils/: plot.py
